Renomeando curso de Integração Contínua

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
         <li>Vagrant</li>
         <li>Docker</li>
         <li>Ansible</li>
-        <li>Integração Contínua</li>
-        <li>Adcionando modificação para commit</li>
+        <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
     </ul>
 </body>
 
