--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <title>Lista de Cursos de Devops da Alura</title>
+    <title>Lista de Cursos de Devops da ALURA</title>
     <meta charset="UTF-8">
 </head>
 
