--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
     <ul>
         <li>Vagrant</li>
-        <li>Docker: Criando containers sem dor de cabeça</li>
+        <li>Docker: Criando containers Sem dor de cabeça</li>
         <li>Ansible</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
+        <li>Kubernetes</li>
     </ul>
 </body>
 
